@@ -137,6 +137,15 @@ $ta->attach();
  </ul>
 <?php endif; ?>
 
+<?php if (!empty($GLOBALS['conf']['holidays']['enable'])): ?>
+ <h4><?php echo _("Holidays:") ?></h4>
+ <ul id="holidays">
+<?php foreach ($GLOBALS['all_holidays'] as $holiday): ?>
+  <li<?php echo Kronolith::getCSSColors($holiday) ?>><label><input type="checkbox" class="checkbox" name="display_cal[]" value="holidays_<?php echo htmlspecialchars($holiday['id']) ?>"<?php echo (in_array($holiday['id'], $display_holidays) ? ' checked="checked"' : '') . ' /> ' . htmlspecialchars($holiday['title']) ?></label></li>
+<?php endforeach; ?>
+ </ul>
+<?php endif; ?>
+
 <noscript>
  <p>
   <input type="submit" value="<?php echo _("Save") ?>" class="button" />
